Adding hashmap creating function in EMADLAbstractSymtab for custom layers